changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Encapsulate access to xxx_bonus[] (and similar) arrays with accessor functions
get_xxx_bonus().
---
common/living.c: Make arrays static. Add accessor functions.
common/living.h: Remove arrays. Add accessor function prototypes.
*.c: Replace xxx_bonus[stat] with get_xxx_bonus(stat).
Andreas Kirschbaum 2009-02-03

common/object.c, common/exp.c, common/time.c, common/recipe.c, common/arch.c,
  common/map.c, common/los.c: Fix some minor issues (variables that should have
  been static, using 0 instead of NULL, leading to more confusing code) found
  using the static analysis tool "sparse" (made for Linux kernel originally).
Arvid Norlander 2009-02-03

plugins/cfpython/include/cfpython.h, plugins/cfpython/cfpython.c:
  To make porting to Python 3 in the future easier, enable the forward
  compatibility warning flag if crossfire is compiled against Python 2.6, this
  will result in warnings to stderr about "DeprecationWarning" if incompatible
  code is found. Several issues has already been fixed recently (thanks to
  having this enabled locally). Compiling Crossfire against Python 2.5 or older
  still works (of course). Also add a missing include causing warnings under
  Python 2.6.
Arvid Norlander 2009-02-03

common/shstr.c: Use the correct return type from hashstr() current code assumed
  sizeof(int) == sizeof(long) == sizeof(void*) which is incorrect for many
  systems (such as x86_64). There was another potential (as in: would not happen
  with current hash table size) issue in the same code with mixing signed and
  unsigned. Also fixed.
Arvid Norlander 2009-02-03
